# retro-junk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  dist-workspace.toml
.claude/: settings.json  settings.local.json
.claude/skills/game-scraping/: GameDataBase.md  LibRetroDB.md  NoIntroDAT.md  SKILL.md  ScreenScraperAPI.md
.claude/skills/gaming-frontends/: ES-DE.md  LaunchBox.md  Pegasus.md  Playnite.md  RetroArch.md  SKILL.md
.claude/skills/retro-archive/: FriendlyIntro.md  SKILL.md  SUMMARY.md  new-analyzer.md
.claude/skills/retro-archive/consoles/: 360_Overview.md  3DS_Overview.md  Dreamcast_Overview.md  GBA_Overview.md  GBC_Overview.md  GB_Overview.md  GameCube_Overview.md  Genesis_Overview.md  MasterSystem_Overview.md  N64_Overview.md  NDS_Overview.md  NES_Overview.md  PS2_Overview.md  PS3_Overview.md  PS4_Overview.md  PS5_Overview.md  PSP_Overview.md  PSX_Overview.md  SNES_Overview.md  Saturn_Overview.md  Switch_Overview.md  Vita_Overview.md  Wii_Overview.md  XBO_Overview.md  XBS_Overview.md  Xbox_Overview.md
.claude/skills/retro-archive/formats/: 3DS.md  FDS.md  GBA.md  GameBoy.md  GameCube.md  MasterSystem.md  Megadrive_Genesis.md  N64.md  NDS.md  PS2.md  PSX.md  RVZ.md  Redump.md  SNES.md  Saturn.md  Wii.md  iNES.md
.github/workflows/: pages.yml  release.yml
catalog/companies/: atlus.yaml  capcom.yaml  ea.yaml  konami.yaml  microsoft.yaml  namco.yaml  nintendo.yaml  sega.yaml  sony.yaml  square.yaml
catalog/overrides/: psx-serials.yaml
docs/: book.toml
retro-junk-catalog/: Cargo.toml
retro-junk-catalog/src/: lib.rs  name_parser.rs  types.rs  yaml.rs
retro-junk-catalog/tests/: name_parser.rs  yaml.rs
retro-junk-cli/: Cargo.toml
retro-junk-cli/src/: cli_types.rs  error.rs  main.rs  spinner.rs
retro-junk-cli/src/commands/: analyze.rs  cache.rs  config.rs  credentials.rs  list.rs  mod.rs  rename.rs  repair.rs  scrape.rs
retro-junk-cli/src/commands/catalog/: disagreements.rs  enrich.rs  enrich_gdb.rs  gaps.rs  import.rs  lookup.rs  mod.rs  reconcile.rs  reset.rs  scan.rs  stats.rs  unenrich.rs  verify.rs
retro-junk-core/: Cargo.toml
retro-junk-core/src/: checksum.rs  disc.rs  error.rs  lib.rs  platform.rs  region.rs  util.rs
retro-junk-core/src/tests/: disc_tests.rs  platform_tests.rs
retro-junk-dat/: Cargo.toml
retro-junk-dat/src/: cache.rs  dat.rs  error.rs  gdb.rs  gdb_cache.rs  gdb_index.rs  hasher.rs  lib.rs  matcher.rs  rename.rs  systems.rs  util.rs
retro-junk-dat/src/tests/: dat_tests.rs  gdb_index_tests.rs  gdb_tests.rs  matcher_tests.rs
retro-junk-db/: Cargo.toml
retro-junk-db/src/: lib.rs  operations.rs  queries.rs  schema.rs
retro-junk-db/tests/: operations.rs  queries.rs  schema.rs
retro-junk-frontend/: Cargo.toml
retro-junk-frontend/src/: asset_types.rs  error.rs  esde.rs  lib.rs  media_types.rs  miximage.rs  miximage_layout.rs
retro-junk-frontend/src/tests/: esde_tests.rs  miximage_tests.rs
retro-junk-gui/: Cargo.toml
retro-junk-gui-cjk/: Cargo.toml
retro-junk-gui-cjk/src/: main.rs
retro-junk-gui/fonts/: LICENSE
retro-junk-gui/src/: app.rs  cache.rs  fonts.rs  lib.rs  main.rs  settings.rs  state.rs  util.rs
retro-junk-gui/src/backend/: assets.rs  dat.rs  export.rs  hash.rs  media.rs  mod.rs  rename.rs  scan.rs  worker.rs
retro-junk-gui/src/views/: library.rs  mod.rs  settings.rs  tools.rs  tools_browse.rs
retro-junk-gui/src/widgets/: activity_bar.rs  console_tree.rs  detail_panel.rs  game_table.rs  mod.rs  status_badge.rs
retro-junk-import/: Cargo.toml
retro-junk-import/src/: dat_import.rs  gdb_import.rs  lib.rs  merge.rs  progress.rs  reconcile.rs  scan_import.rs  scraper_import.rs
retro-junk-import/tests/: dat_import.rs  merge.rs  scan_import.rs  scraper_import.rs
retro-junk-lib/: Cargo.toml
retro-junk-lib/src/: async_util.rs  context.rs  display.rs  hasher.rs  lib.rs  n64.rs  progress.rs  rename.rs  repair.rs  scanner.rs  settings.rs  util.rs  worker_pool.rs
retro-junk-lib/src/tests/: hasher_tests.rs  repair_tests.rs  util_tests.rs
retro-junk-microsoft/: Cargo.toml
retro-junk-microsoft/src/: lib.rs  xbox.rs  xbox360.rs
retro-junk-nintendo/: Cargo.toml
retro-junk-nintendo/src/: constants.rs  ds.rs  gameboy.rs  gamecube.rs  gba.rs  lib.rs  licensee.rs  n3ds.rs  n64.rs  n64_byteorder.rs  nes.rs  nintendo_disc.rs  snes.rs  wii.rs  wiiu.rs
retro-junk-nintendo/src/n3ds/: cia.rs  common.rs  mod.rs  ncch.rs  ncsd.rs
retro-junk-nintendo/src/n3ds/tests/: cia_tests.rs  common_tests.rs  mod_tests.rs  ncsd_tests.rs
retro-junk-nintendo/src/tests/: ds_tests.rs  gameboy_tests.rs  gamecube_tests.rs  gba_tests.rs  n64_byteorder_tests.rs  n64_tests.rs  nes_tests.rs  snes_tests.rs  wii_tests.rs
retro-junk-scraper/: Cargo.toml  build.rs
retro-junk-scraper/src/: assets.rs  client.rs  credentials.rs  error.rs  lib.rs  log.rs  lookup.rs  media.rs  scrape.rs  systems.rs  types.rs
retro-junk-scraper/src/tests/: lookup_tests.rs
retro-junk-sega/: Cargo.toml
retro-junk-sega/src/: dreamcast.rs  game_gear.rs  genesis.rs  lib.rs  master_system.rs  saturn.rs  sega_32x.rs  sega_cd.rs  sg1000.rs
retro-junk-sega/src/tests/: genesis_tests.rs
retro-junk-sony/: Cargo.toml
retro-junk-sony/examples/: hash_check.rs
retro-junk-sony/src/: lib.rs  ps1.rs  ps1_disc.rs  ps2.rs  ps3.rs  psp.rs  sony_disc.rs  vita.rs
retro-junk-sony/src/tests/: disc_test_helpers.rs  ps1_disc_tests.rs  ps1_tests.rs  ps2_tests.rs  sony_disc_tests.rs
