[workspace]
resolver = "2"
members = [
    "retro-junk-cli",
    "retro-junk-gui",
    "retro-junk-lib",
    "retro-junk-nintendo",
    "retro-junk-sony",
    "retro-junk-sega",
    "retro-junk-microsoft",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/retro-junk"

[workspace.dependencies]
retro-junk-lib = { path = "retro-junk-lib" }
retro-junk-nintendo = { path = "retro-junk-nintendo" }
retro-junk-sony = { path = "retro-junk-sony" }
retro-junk-sega = { path = "retro-junk-sega" }
retro-junk-microsoft = { path = "retro-junk-microsoft" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
sha2 = "0.10"
