[workspace]
resolver = "2"
members = [
    "retro-junk-cli",
    "retro-junk-gui",
    "retro-junk-core",
    "retro-junk-lib",
    "retro-junk-dat",
    "retro-junk-nintendo",
    "retro-junk-sony",
    "retro-junk-sega",
    "retro-junk-microsoft",
    "retro-junk-scraper",
    "retro-junk-frontend",
    "retro-junk-catalog",
    "retro-junk-db",
    "retro-junk-import",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/retro-junk"

[workspace.dependencies]
retro-junk-core = { path = "retro-junk-core" }
retro-junk-lib = { path = "retro-junk-lib" }
retro-junk-nintendo = { path = "retro-junk-nintendo" }
retro-junk-sony = { path = "retro-junk-sony" }
retro-junk-sega = { path = "retro-junk-sega" }
retro-junk-microsoft = { path = "retro-junk-microsoft" }
retro-junk-dat = { path = "retro-junk-dat" }
retro-junk-catalog = { path = "retro-junk-catalog" }
retro-junk-db = { path = "retro-junk-db" }
retro-junk-import = { path = "retro-junk-import" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
sha2 = "0.10"
quick-xml = "0.37"
crc32fast = "1.4"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
chrono = "0.4"
retro-junk-scraper = { path = "retro-junk-scraper" }
retro-junk-frontend = { path = "retro-junk-frontend" }
chd = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = "0.25"
serde_yml = "0.0.12"
log = { version = "0.4", features = ["std"] }
strip-ansi-escapes = "0.2"
pathdiff = "0.2"
async-channel = "2"
