[package]
name = "retro-junk-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "retro-junk"
path = "src/main.rs"

[dependencies]
retro-junk-lib.workspace = true
retro-junk-nintendo.workspace = true
retro-junk-sony.workspace = true
retro-junk-sega.workspace = true
retro-junk-microsoft.workspace = true
clap.workspace = true
owo-colors.workspace = true
