[package]
name = "retro-junk-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "retro-junk"
path = "src/main.rs"

[dependencies]
retro-junk-lib.workspace = true
retro-junk-dat.workspace = true
retro-junk-nintendo.workspace = true
retro-junk-sony.workspace = true
retro-junk-sega.workspace = true
retro-junk-microsoft.workspace = true
retro-junk-scraper.workspace = true
retro-junk-frontend.workspace = true
clap.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
strip-ansi-escapes.workspace = true
