[package]
name = "retro-junk-dat"
version.workspace = true
edition.workspace = true

[dependencies]
retro-junk-core.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
log.workspace = true
