[package]
name = "retro-junk-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
retro-junk-core.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
image.workspace = true
serde_yml.workspace = true
dirs.workspace = true
