[package]
name = "retro-junk-gui-cjk"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "retro-junk GUI with full CJK font support (Japanese, Chinese, Korean)"

[[bin]]
name = "retro-junk-gui-cjk"
path = "src/main.rs"

[dependencies]
retro-junk-gui = { path = "../retro-junk-gui", features = ["cjk-full"] }
eframe = "0.30"

[package.metadata.dist]
dist = true

[package.metadata.dist.dependencies.apt]
libgtk-3-dev = '*'
libxcb-render0-dev = '*'
libxcb-shape0-dev = '*'
libxcb-xfixes0-dev = '*'
libxkbcommon-dev = '*'
