[package]
name = "retro-junk-gui"
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "retro-junk-gui"
path = "src/main.rs"

[features]
default = ["cjk-full"]
cjk-full = []
cjk-jp = []

[dependencies]
retro-junk-lib.workspace = true
retro-junk-dat.workspace = true
retro-junk-core.workspace = true
retro-junk-nintendo.workspace = true
retro-junk-sony.workspace = true
retro-junk-sega.workspace = true
retro-junk-microsoft.workspace = true
retro-junk-frontend.workspace = true
retro-junk-db.workspace = true
retro-junk-catalog.workspace = true
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
rfd = "0.15"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
sha2.workspace = true
chrono.workspace = true
retro-junk-scraper.workspace = true
tokio.workspace = true
env_logger.workspace = true

[package.metadata.dist]
dist = false
