[package]
name = "retro-junk-lib"
version.workspace = true
edition.workspace = true

[dependencies]
retro-junk-core.workspace = true
retro-junk-dat.workspace = true
thiserror.workspace = true
crc32fast.workspace = true
sha1.workspace = true
md5.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
log.workspace = true
async-channel.workspace = true
