[package]
name = "retro-junk-lib"
version.workspace = true
edition.workspace = true

[dependencies]
retro-junk-core.workspace = true
retro-junk-dat.workspace = true
retro-junk-nintendo.workspace = true
retro-junk-sony.workspace = true
retro-junk-sega.workspace = true
retro-junk-microsoft.workspace = true
thiserror.workspace = true
serde.workspace = true
crc32fast.workspace = true
sha1.workspace = true
md5.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
toml.workspace = true
dirs.workspace = true
log.workspace = true
