[package]
name = "retro-junk-scraper"
version.workspace = true
edition.workspace = true

[dependencies]
retro-junk-core.workspace = true
retro-junk-lib.workspace = true
retro-junk-frontend.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
dirs.workspace = true
futures.workspace = true
chrono.workspace = true
